--- a/ShowMe/src/app/navbar/navbar.component.html
+++ b/ShowMe/src/app/navbar/navbar.component.html
@@ -1,1 +1,26 @@
-<p>navbar works!</p>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+<div class= "custom-navbar">
+
+<nav class="navbar navbar-light">
+    <a class="navbar-brand" id ="sometext">{{ utils.brandName }}</a>
+    <div class="searchform">   
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+</div>
+  </nav>
+
+</div>
+
+<div class ="wrapper">
+    <ul class="locationsList"> 
+        <li *ngFor=" let location of utils.getLocationsList()">
+            <a href="{{ location }}">{{ location }}</a> 
+        </li>
+
+    </ul> 
+
+</div>
