--- a/ShowMe/src/app/navbar/navbar.component.html
+++ b/ShowMe/src/app/navbar/navbar.component.html
@@ -1,14 +1,16 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
 
 <div class= "custom-navbar">
 
 <nav class="navbar navbar-light">
-    <a class="navbar-brand" id ="sometext">{{ utils.brandName }}</a>
-    <div class="searchform">   
-    <form class="form-inline">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <img src="https://cdn1.iconfinder.com/data/icons/business-seo-vol-4/512/1-34-512.png" alt="ShowMe logo" height="43" width="43">
+    <a class="navbar-brand myLogo">{{ utils.brandName }}</a>
+    <div class="searchform ">   
+    <form class="form-inline ">
+      <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-1  mytest" type="submit">Search</button>
     </form>
 </div>
   </nav>
@@ -22,5 +24,4 @@
         </li>
 
     </ul> 
-
 </div>
