Finished  mvp footer  //missing links system

--- a/ShowMe/src/app/navbar/navbar.component.scss
+++ b/ShowMe/src/app/navbar/navbar.component.scss
@@ -16,7 +16,7 @@
     border-width: 0px 0px 1px 0px;
     border-color: #9AD4D6;
     border-style: solid;
-    background-color: #DBCBD8;
+    background-color: #95C623;
     height: 100%;
 }
 
