Final touches on UI, before highlights C.

--- a/ShowMe/src/app/footer/footer.component.html
+++ b/ShowMe/src/app/footer/footer.component.html
@@ -1,15 +1,14 @@
-<p>footer works!</p>
-
-
-
 <!-- Footer -->
-<footer class="page-footer font-small teal pt-4 customFooter">
+<footer class="page-footer font-small teal pt-4 " id="customFooter">
 
         <!-- Footer Text -->
         <div class="container-fluid text-center text-md-left">
+
+            
       
           <!-- Grid row -->
           <div class="row">
+              
       
             <!-- Grid column -->
             <div class="col-md-6 mt-md-0 mt-3">
@@ -17,21 +16,23 @@
               <!-- Content -->
               <h5 class="text-uppercase font-weight-bold">{{ utils.brandName }}</h5>
               <span></span>
-              <p>{{ utils.companyMotto}}</p>
+              <p class="footerDescription">{{ utils.companyMotto}}</p>
       
             </div>
             <!-- Grid column -->
       
-            <hr class="clearfix w-100 d-md-none pb-3">
+           <!-- <hr class="clearfix w-100 d-md-none pb-3"> --> 
       
-            <!-- Grid column -->
-            <div class="col-md-6 mb-md-0 mb-3">
+             <!-- Grid column -->
+             <div class="col-md-6 mb-md-0 mb-3 contacts">
       
-              <!-- Content -->
-                <a href="asd" > Contacts</a>
-      
-            </div>
-            <!-- Grid column -->
+                    <!-- Content -->
+                      <a class="footerLinks" href="about">About</a>
+                      <a class ="footerLinks" href="asd" > Contacts</a>
+            
+                  </div>
+                  <!-- Grid column -->
+        
       
           </div>
           <!-- Grid row -->
@@ -40,10 +41,11 @@
         <!-- Footer Text -->
       
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2018 Copyright:
-          <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
-        </div>
-        <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2019 Copyright:
+        <a href="http://localhost:4200" target="_self"> http://showme.com</a>
+        
+      </div>
+      <!-- Copyright -->
       
       </footer>
       <!-- Footer -->
