--- a/ShowMe/src/app/homepage/homepage.component.html
+++ b/ShowMe/src/app/homepage/homepage.component.html
@@ -1,3 +1,3 @@
 <app-navbar></app-navbar>
-<p>homepage works!</p>
+<p class ="loading" >homepage works and Loading ... !</p>
 <app-footer></app-footer>
