Final mvp Homepage with  mockServices

--- a/ShowMe/src/app/footer/footer.component.scss
+++ b/ShowMe/src/app/footer/footer.component.scss
@@ -6,8 +6,8 @@
     border-radius: 5px;
     background-color: $footerBackground;
 
-    position: fixed;
-    left: 0;
+    position: absolute;
+    top: 82%;
     bottom: 0;
     width: 100%;
 }
