--- a/ShowMe/src/app/homepage/homepage.component.html
+++ b/ShowMe/src/app/homepage/homepage.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
-<p class ="loading" >homepage works and Loading ... !</p>
+<div class= "componentHolder">
+        <app-highlights></app-highlights>
+</div>
 <app-footer></app-footer>
