--- a/ShowMe/src/app/homepage/homepage.component.html
+++ b/ShowMe/src/app/homepage/homepage.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div class= "componentHolder">
-        <app-highlights></app-highlights>
+        <!-- <app-highlights></app-highlights> -->
+        <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
