--- a/ShowMe/src/app/navbar/navbar.component.html
+++ b/ShowMe/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 
 <nav class="navbar navbar-light">
     <img src="https://cdn1.iconfinder.com/data/icons/business-seo-vol-4/512/1-34-512.png" alt="ShowMe logo" height="43" width="43">
-    <a class="navbar-brand myLogo">{{ utils.brandName }}</a>
+    <a  routerLink="" class="myLogo">{{ utils.brandName }}</a>
     <div class="searchform ">   
     <form class="form-inline ">
       <input class="form-control" type="search" placeholder="Search" aria-label="Search">
