Last approach on project mvp  Home and SpecificView done

--- a/ShowMe/src/app/navbar/navbar.component.html
+++ b/ShowMe/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
 <div class ="wrapper">
     <ul class="locationsList"> 
         <li *ngFor=" let location of utils.getLocationsList()">
-            <a href="{{ location }}">{{ location }}</a> 
+            <a class ="locationName" href="{{ location }}">{{ location }}</a> 
         </li>
 
     </ul> 
