--- a/ShowMe/src/app/navbar/navbar.component.html
+++ b/ShowMe/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     <div class="searchform ">   
     <form class="form-inline ">
       <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-1  mytest" type="submit">Search</button>
+      <button class="btn btn-outline-success my-2 my-sm-1  searchButton" type="submit">Search</button>
     </form>
 </div>
   </nav>
