Homepage full responsive at mvp level

--- a/ShowMe/src/app/footer/footer.component.html
+++ b/ShowMe/src/app/footer/footer.component.html
@@ -1,15 +1,12 @@
+
+<div class = "footerTest "></div>
 <!-- Footer -->
 <footer class="page-footer font-small teal pt-4 " id="customFooter">
 
         <!-- Footer Text -->
         <div class="container-fluid text-center text-md-left">
-
-            
-      
-          <!-- Grid row -->
           <div class="row">
               
-      
             <!-- Grid column -->
             <div class="col-md-6 mt-md-0 mt-3">
       
@@ -21,15 +18,12 @@
             </div>
             <!-- Grid column -->
       
-           <!-- <hr class="clearfix w-100 d-md-none pb-3"> --> 
-      
              <!-- Grid column -->
              <div class="col-md-6 mb-md-0 mb-3 contacts">
       
                     <!-- Content -->
                       <a class="footerLinks" href="about">About</a>
                       <a class ="footerLinks" href="asd" > Contacts</a>
-            
                   </div>
                   <!-- Grid column -->
         
@@ -38,14 +32,12 @@
           <!-- Grid row -->
       
         </div>
-        <!-- Footer Text -->
       
         <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
         <a href="http://localhost:4200" target="_self"> http://showme.com</a>
-        
       </div>
       <!-- Copyright -->
       
       </footer>
-      <!-- Footer -->
+
