--- a/ShowMe/src/app/highlights/highlights.component.scss
+++ b/ShowMe/src/app/highlights/highlights.component.scss
@@ -1,8 +1,14 @@
 
 .highlightsContainer{
+    
     margin: auto;
-    padding-top: 3%;
     text-align: center;
+}
+
+.card{
+    margin: auto;
+    margin-bottom: 5%;
+    margin-top: 5%;
 }
 
 .visitMe{
