--- a/ShowMe/src/app/footer/footer.component.scss
+++ b/ShowMe/src/app/footer/footer.component.scss
@@ -3,13 +3,17 @@
 
 #customFooter{
     
-    border-radius: 5px;
+    border-radius: 2px;
     background-color: $footerBackground;
 
-    position: absolute;
-    top: 82%;
+    position: static;
+    left: 0;
     bottom: 0;
-    width: 100%;
+    margin:auto;
+}
+
+.footerTest{
+    height: 80px;
 }
 
 .footerLinks{
@@ -24,7 +28,6 @@
 }
 
 .contacts{
-    position: absolute;
     text-align: right;
     font-size: 20px;
     margin-top: 3%;
