Changed routing for better scalability

--- a/ShowMe/src/app/homepage/homepage.component.html
+++ b/ShowMe/src/app/homepage/homepage.component.html
@@ -1,7 +1,2 @@
+        <app-highlights></app-highlights>
 
-<app-navbar></app-navbar>
-
-        <!-- <app-highlights></app-highlights> -->
-        <router-outlet></router-outlet>
-
-<app-footer></app-footer>
