--- a/ShowMe/src/app/app.component.html
+++ b/ShowMe/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-homepage></app-homepage>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
 
-<!--<router-outlet></router-outlet> -->
+<app-footer></app-footer>
