--- a/ShowMe/src/app/navbar/navbar.component.html
+++ b/ShowMe/src/app/navbar/navbar.component.html
@@ -7,18 +7,12 @@
 
 <div class="navbar">
   <a class="active" routerLink=""><i class="fa fa-fw fa-home"></i> ShowMe</a> 
-  <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
   <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
   <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
 </div>
 
-<div class ="wrapper listwrapper">
-  <ul class="locationsList"> 
-      <li *ngFor=" let location of utils.getLocationsList()">
-          <a class ="locationName" href="{{ location }}">{{ location }}</a> 
-      </li>
-  </ul> 
-
 </div>
 
-</div>
+<app-locationlist> </app-locationlist>
+
+<app-searchform></app-searchform>
