Post / and connection to highlights done

--- a/ShowMe/src/app/highlights/highlights.component.html
+++ b/ShowMe/src/app/highlights/highlights.component.html
@@ -1,7 +1,7 @@
 
 <div class="container highlightsContainer">
         <div class="row">
-          <div class="col-sm" *ngFor="let location of apiProvider.requestApiHighlights()">
+          <div class="col-sm" *ngFor="let location of highlights">
 
                 <div class="card" style="width: 18rem;">
                         <img src="{{ location.imageSrc }}" class="card-img-top locationImg" alt="...">
