small fixed on css

--- a/ShowMe/src/app/highlights/highlights.component.html
+++ b/ShowMe/src/app/highlights/highlights.component.html
@@ -8,6 +8,7 @@
                         <div class="card-body">
                           <h5 class="card-title">{{ location.title}}</h5>
                           <p class="card-text locationText">{{ location.description}} </p>
+                          <div class="fadeout"></div>
                           <a [routerLink]="['/location', location.id]" class="btn btn-primary visitMe">Visit</a>
                          </div>
                   </div>
