--- a/ShowMe/src/app/highlights/highlights.component.scss
+++ b/ShowMe/src/app/highlights/highlights.component.scss
@@ -22,7 +22,20 @@
 
 .locationText{
     height: 50px;
-    //white-space: nowrap;
+    white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.fadeout {
+    position: absolute; 
+    bottom: 4em;
+    width:100%;
+    height: 4em;
+    background: -webkit-linear-gradient(
+        rgba(255, 255, 255, 0) 10%,
+        rgba(255, 255, 255, 1) 40%
+    ); 
+    
+} 
+section {position:relative}     
