--- a/ShowMe/src/app/navbar/navbar.component.html
+++ b/ShowMe/src/app/navbar/navbar.component.html
@@ -7,8 +7,8 @@
 
 <div class="navbar">
   <a class="active" routerLink=""><i class="fa fa-fw fa-home"></i> ShowMe</a> 
- 
-  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+  <a class= "createLocation mr-auto" routerLink="createlocation"><i class="fas fa-plus"></i> Create</a>
+  <a href=""><i class="fa fa-fw fa-user"></i> Login</a>
 </div>
 
 </div>
