--- a/ShowMe/src/app/navbar/navbar.component.scss
+++ b/ShowMe/src/app/navbar/navbar.component.scss
@@ -4,8 +4,11 @@
     height: 70px;
 }
 
-.searchForm{
+.createLocation{
+ margin-left: 5%;
+}
 
+.searchForm{
   margin-right: 60%;
   width: 30%; 
 }
