Created page for creating new locations

--- a/ShowMe/src/app/_partialCustom.scss
+++ b/ShowMe/src/app/_partialCustom.scss
@@ -2,6 +2,13 @@ $bannerBackground: #03596B;
 
 $footerBackground: #16DB93;
 
+// ShowMe Collors Pallete   https://colorhunt.co/palette/14832
+$LightBlue:  #e4f9f5;
+$Blue: #30e3ca;
+$DarkBlue: #11999e;
+$Grey: #40514e;
+
+
 %loading{
    font-size: 30px;
    text-align: center;
