--- a/ShowMe/src/app/location-details/location-details.component.html
+++ b/ShowMe/src/app/location-details/location-details.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3" style="margin: 20px;">
+<div class="card mb-3 locationCard" style="margin: 20px;">
         <div class="row no-gutters">
           <div class="col-md-4">
             <img src="{{location.imageSrc}}" class="card-img" alt="...">
