--- a/ShowMe/src/app/createlocation/createlocation.component.html
+++ b/ShowMe/src/app/createlocation/createlocation.component.html
@@ -1,1 +1,32 @@
-<p>createlocation works!</p>
+<h3>Create a location</h3>
+
+<div class="media " id="createStruct">
+        <form class="form-horizontal myForm" action="/action_page.php">
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="email">Title:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Enter location name ...">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2">Description:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Enter description">
+              </div>
+            </div>
+
+          </form>
+      </div>
+      <img class="align-self-center mr-3" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/No_image_3x4.svg" alt="Generic placeholder image">
+      <div class="submitBtn">
+            <div class="col-sm-offset-2 col-6 col-md-3 float-md-right">
+              <button type="submit" class="btn btn-default">Submit</button>
+            </div>
+          </div>
+
+
+
+    
+
+
+      
