Done create page with connection to databse in mvp checkpoint

--- a/ShowMe/src/app/createlocation/createlocation.component.scss
+++ b/ShowMe/src/app/createlocation/createlocation.component.scss
@@ -20,3 +20,16 @@
 
 }
 
+.switch{
+    margin-left: 3%;
+}
+
+.title{
+    margin-top: 1%;
+}
+
+.createLocationDiv{
+    margin:5%;
+    background-color: rgba(53, 71, 69, 0.2);
+    border-radius: 15px;
+}
