--- a/ShowMe/src/app/highlights/highlights.component.html
+++ b/ShowMe/src/app/highlights/highlights.component.html
@@ -1,5 +1,9 @@
 
+<div class ="bg-image"></div>
+
+
 <div class="container highlightsContainer">
+
         <div class="row">
           <div class="col-sm" id=" cardsHolder" *ngFor="let location of highlights">
 
