--- a/ShowMe/src/app/createlocation/createlocation.component.html
+++ b/ShowMe/src/app/createlocation/createlocation.component.html
@@ -1,29 +1,58 @@
-<h3>Create a location</h3>
+
+
+
+<div class="createLocationDiv">
+<h3 class ="title">Create a location</h3>
 
 <div class="media " id="createStruct">
-        <form class="form-horizontal myForm" action="/action_page.php">
+        <form class="form-horizontal myForm"  action="javascript:void(0);">
+
             <div class="form-group">
               <label class="control-label col-sm-2" for="email">Title:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter location name ...">
+                <input type="text" class="form-control" #formTitle placeholder="Enter location name ...">
               </div>
             </div>
+
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="email">Link to image:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" #formImageSrc placeholder="http://example.com/picture.jpg">
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="email">Localizaçao:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" #formLocation placeholder="Enter the place location !">
+              </div>
+            </div>
+            
             <div class="form-group">
               <label class="control-label col-sm-2">Description:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter description">
+                <input type="text" class="form-control" #formDescription placeholder="Enter description">
+              </div>
+            </div>
+
+            <!-- Default switch -->
+            <div class="custom-control custom-switch switch">
+              <input type="checkbox" class="custom-control-input" id="customSwitches">
+              <label class="custom-control-label" for="customSwitches">Toggle this switch element</label>
+            </div>
+
+            <div class="submitBtn">
+              <div class="col-sm-offset-2 col-6 col-md-3 float-md-right">
+                <button  (click)="createLocation(formTitle.value,formImageSrc.value,formDescription.value,formLocation.value)" class='btn btn-default'>Submit</button>
               </div>
             </div>
 
           </form>
-      </div>
-      <img class="align-self-center mr-3" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/No_image_3x4.svg" alt="Generic placeholder image">
-      <div class="submitBtn">
-            <div class="col-sm-offset-2 col-6 col-md-3 float-md-right">
-              <button type="submit" class="btn btn-default">Submit</button>
-            </div>
-          </div>
+      </div>  
 
+      <img class="align-self-center mr-3" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/No_image_3x4.svg" alt="Generic placeholder image">
+    
+</div>
 
 
     
