--- a/ShowMe/src/app/highlights/highlights.component.scss
+++ b/ShowMe/src/app/highlights/highlights.component.scss
@@ -1,6 +1,7 @@
 .highlightsContainer{
     margin: auto;
     text-align: center;
+    
 }
 
 .card{
@@ -35,5 +36,25 @@
         rgba(255, 255, 255, 0) 10%,
         rgba(255, 255, 255, 1) 40% ); 
 } 
+
+.bg-image:before {
+    content: "";
+    position: fixed;
+    top: 2%;
+    background-attachment: fixed;
+    z-index: -1;
+
+    background-image: url('https://wallup.net/wp-content/uploads/2016/03/10/330475-photography-landscape-nature-path-water-lake-sea-azores-748x468.jpg');
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+  }
 
 section {position:relative}     
