Done linking with FileServer

--- a/ShowMe/src/app/featured/featured.component.html
+++ b/ShowMe/src/app/featured/featured.component.html
@@ -1,9 +1,10 @@
 
 
-<div class= "component"> 
-  <h2 class= "featured"> Featured </h2>
 
-<div class="media locationInfo">
+<div class= "component"> 
+  
+
+<div class="media featuredcard">
     <img src="{{ featuredLocation.imageSrc }}" class="" id ="image" alt="...">
     <div class="media-body">
       <h2 class="locationTitle">{{ featuredLocation.title}}</h2>
@@ -13,3 +14,4 @@
   </div>
 
 </div>
+
