--- a/ShowMe/src/app/highlights/highlights.component.html
+++ b/ShowMe/src/app/highlights/highlights.component.html
@@ -1,22 +1,21 @@
 
-<div class ="bg-image"></div>
+<div class="highlightsContainer" >
 
+       
 
-<div class="container highlightsContainer">
+          <div class="cardsHolder"  *ngFor="let location of highlights">
 
-        <div class="row">
-          <div class="col-sm" id=" cardsHolder" *ngFor="let location of highlights">
-
-                <div class="card" id="cardId"[routerLink]="['/location', location.id]"  style="width: 18rem;">
-                        <img src="{{ location.imageSrc }}" class="card-img-top cardImg" alt="...">
+                <div class="card"  id="cardId"[routerLink]="['/location', location.id]"  style="width: 18rem;">
+                       
                         <div class="card-body">
-                          <h5 class="card-title">{{ location.title}}</h5>
-                          <p class="card-text locationText">{{ location.description}} </p>
-                          <div class="fadeout"></div>
-                          <a class="btn btn-primary btnVisit ">Visit</a>
+                                   <img  class="card-img-top cardImg" src="{{ location.imageSrc }}" alt="...">
+                                   <h5 class="card-title">{{ location.title}}</h5>
+                                   <p class="card-text locationText">{{ location.description}} </p>
+                                   <div class="fadeout"></div>
+                                   <a class="btn btn-primary btnVisit ">Visit</a>
                          </div>
                   </div>
-                  
-           </div>   
+
          </div>
   </div>
+
