--- a/ShowMe/src/app/highlights/highlights.component.scss
+++ b/ShowMe/src/app/highlights/highlights.component.scss
@@ -1,7 +1,11 @@
-.highlightsContainer{
-    margin: auto;
-    text-align: center;
-    
+.highlightsContainer{    
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.cardsHolder{
+   margin: auto;  
 }
 
 .card{
@@ -10,51 +14,56 @@
     margin-top: 5%;
 }
 
+.card-body{
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.btnVisit{width:50%; line-height: 50%;  }
+
+.cardImg{ padding-bottom: 10%;}
+
+.locationText{
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-height: 20px;     /* fallback */
+    -webkit-line-clamp: 2; /* number of lines to show */
+    -webkit-box-orient: vertical;   
+}
+    
+   
+
+
 #cardId:hover{
     transform: scale(1.05, 1.05);
     box-shadow: 2px 2px 20px 10px rgba(46, 46, 46, 0.23), 
       -5px -5px 30px 15px rgba(0,0,0,0.22);
 }
 
-.btnVisit{ width: 40%; }
 
-.locationImg{ border-radius: 2px; }
-
-.locationText{
-    height: 50px;
-    white-space: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
 
 .fadeout {
     position: absolute; 
-    bottom: 4em;
-    width: 85%;
-    height: 4em;
+    bottom: 3em;
+    width: 100%;
+    height: 3em;
     background: -webkit-linear-gradient(
         rgba(255, 255, 255, 0) 10%,
-        rgba(255, 255, 255, 1) 40% ); 
+        rgba(255, 255, 255, 1) 90% ); 
+
 } 
 
-.bg-image:before {
-    content: "";
-    position: fixed;
-    top: 2%;
-    background-attachment: fixed;
-    z-index: -1;
 
-    background-image: url('https://wallup.net/wp-content/uploads/2016/03/10/330475-photography-landscape-nature-path-water-lake-sea-azores-748x468.jpg');
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    
-    -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(5px);
+
+@media only screen and (max-width: 800px) {
+
+    .cardsHolder{
+        padding: 5%;
+        -webkit-overflow-scrolling: touch;        
+    }
   }
 
-section {position:relative}     
+//section {position:relative}     
