--- a/ShowMe/src/app/locationlist/locationlist.component.scss
+++ b/ShowMe/src/app/locationlist/locationlist.component.scss
@@ -8,7 +8,7 @@ ul li{
 }
 
 .locationsList{
-    background-color: #eeeeee;
+    background-color: #ffffff; //#eeeeee
     height: 40px;
     border-style: solid;
     text-align: center;
