--- a/ShowMe/src/app/navbar/navbar.component.html
+++ b/ShowMe/src/app/navbar/navbar.component.html
@@ -3,15 +3,17 @@
 <link href="https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<div class= "custom-navbar">
 
-<div class="navbar">
-  <a class="active" routerLink=""><i class="fa fa-fw fa-home"></i> ShowMe</a> 
-  <a class= "createLocation mr-auto" routerLink="createlocation"><i class="fas fa-plus"></i> Create</a>
-  <a href=""><i class="fa fa-fw fa-user"></i> Login</a>
-</div>
 
-</div>
+<div class= "navbarWrapper">
+    <img  class = "navbackground" src="http://192.168.1.66:4100/wp-assets/navbar.png">
+    <!-- <a class="active homeButton" routerLink=""><i class="fa fa-fw fa-home"></i> ShowMe</a>  -->
+    <a routerLink=""> 
+       <img  class = "logo" src="http://192.168.1.66:4100/wp-assets/logo.svg"> 
+    </a> 
+    <a class= "createLocation mr-auto" routerLink="createlocation"><i class="fas fa-plus"></i> Create</a>
+    <a class="login " href=""><i class="fa fa-fw fa-user"></i> Login</a>
+  </div> 
 
 <app-locationlist> </app-locationlist>
 
