--- a/ShowMe/src/app/navbar/navbar.component.scss
+++ b/ShowMe/src/app/navbar/navbar.component.scss
@@ -1,30 +1,61 @@
 @import 'src/app/_partialCustom';
 
-.custom-navbar{
-  background-color: #dddddd; 
-  //background-image: url('http://192.168.1.66:4100/wp-content/navbarProto.png');
-  background-repeat: no-repeat;
- background-size: 100% 100%;
- height: 65%;
+*{
+  padding:0px;
+  margin: 0px;
 }
 
-.navbar{
-    height: 70px;
-}
+.navbarWrapper{ 
+  position: relative;
+  top:0;
+  left:0;
 
-.createLocation{
- margin-left: 5%;
-}
-
-@media screen and (max-width: 500px) {
-    .locationsList {
-      display: none;
+  .navbackground{
+    width:100%;
     }
 
-    .navbar a {
-      float: none;
-      display: block;
+  .logo{
+    position: absolute;
+    top: 8%;
+    left: 2%;
+    width: 9%;
+  }
+  
+  .createLocation{ 
+    position: absolute;
+    right:0;
+    top: 20%;
+    padding-right: 5%;
+  }
+  
+  .login{
+    position: absolute;
+    right:0;
+    top: 20%;
+    margin-right: 12%;
+  }
+ }
+
+
+
+// For mobile optimization
+@media screen and (max-width: 900px) {
+
+    .navbackground{
+      height: 70px;
     }
+
+    .logo{
+      position: absolute;
+      height: 70%;
+    }
+
+    .login{
+      position: absolute;
+      padding-right: 10%;
+      top: 20%;
+    }
+
   }
 
   
