--- a/ShowMe/src/app/footer/footer.component.html
+++ b/ShowMe/src/app/footer/footer.component.html
@@ -35,7 +35,7 @@
       
         <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
-        <a href="http://localhost:4200" target="_self"> http://showme.com</a>
+        <a href="http://localhost:4200" target="_self">ShowMe</a>
       </div>
       <!-- Copyright -->
       
